Fixed z-index of cross-section slider and potential views

--- a/wave-interference/src/less/cross-section-slider.less
+++ b/wave-interference/src/less/cross-section-slider.less
@@ -9,6 +9,7 @@
 	padding-top: 1px;
 	padding-bottom: 1px;
 	pointer-events: none;
+	z-index: 15;
 
 
 	/* Functional styling;
